@@ -1,3 +1,12 @@
+2018-03-09  Stephan Szabo  <stephan.szabo@sony.com>
+
+        WebKitTestRunner: Do not build accessibility files/idl when !HAVE(ACCESSIBILITY)
+        https://bugs.webkit.org/show_bug.cgi?id=183516
+
+        Reviewed by Alex Christensen.
+
+        * WebKitTestRunner/CMakeLists.txt:
+
 2018-03-09  Basuke Suzuki  <Basuke.Suzuki@sony.com>
 
         [webkitpy, WinCairo] Launch Apache HTTPD for HTTP Tests.
